# binaryninja-pcode

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: pcode_architecture.cpp
